# folidity

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  out.txt
.github/workflows/: ci.yml
auto/: README.md  counter.fol
concepts/: grammar.md  math_model.typ  samples.md
crates/derive_node/: Cargo.toml
crates/derive_node/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/emitter/: Cargo.toml
crates/emitter/helpers/: signed_arithmetic.teal
crates/emitter/src/: ast.rs  expression.rs  function.rs  instruction.rs  lib.rs  scratch_table.rs  statement.rs  teal.rs  tests.rs
crates/folidity/: Cargo.toml
crates/folidity/src/: main.rs
crates/folidity/src/cmd/: check.rs  compile.rs  mod.rs  new.rs  verify.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: ast.rs  folidity.lalrpop  lexer.rs  lib.rs  tests.rs
crates/semantics/: Cargo.toml
crates/semantics/src/: ast.rs  bounds.rs  contract.rs  decls.rs  functions.rs  global_symbol.rs  lib.rs  statement.rs  symtable.rs  tests.rs  types.rs
crates/semantics/src/expression/: complex.rs  eval.rs  literals.rs  mod.rs  nums.rs  ops.rs  tests.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: ast.rs  executor.rs  lib.rs  links.rs  resolver.rs  solver.rs  tests.rs  transformer.rs
examples/counter/: README.md  contract.fol  counter.fol
examples/demo/: README.md  contract.fol
my_project/: counter.fol
reports/: ECS.bib  brief.tex  ecsproject.cls  ecsproject.typ  main.tex  main.typ  progress.tex  progress.typ
reports/figures/: compilation.drawio  new_context.drawio  trad_context.drawio
reports/old_latex/: ecsproject.cls  gantt.tex
