[workspace]
resolver = "2"
members = [
    "crates/derive_node", 
    "crates/diagnostics",
    "crates/folidity",
    "crates/parser", 
    "crates/semantics",
]

[workspace.package]
authors = ["Gherman Nicolisin <german.nikolishin@gmail.com"]
categories = ["languages", "compiler"]
edition = "2021"
homepage = "https://nikolish.in"
keywords = ["parser", "compiler", "smart-contracts", "blockchain", "formal-verification"]
license = "Apache-2.0"
repository = "https://github.com/SkymanOne/folidity"
version = "1.0.0"

[workspace.dependencies]
folidity-parser = { path = "crates/parser" }
folidity-diagnostics = { path = "crates/diagnostics" }
derive-node = { path = "crates/derive_node" }
folidity-semantics = { path = "crates/semantics" }
logos = "0.13"
lalrpop-util = "0.20"
lalrpop = "0.20"
thiserror = "1.0"
syn = "2.0"
synstructure = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
