[workspace]
resolver = "2"
members = [
    "crates/derive_node", 
    "crates/diagnostics",
    "crates/folidity",
    "crates/parser", 
    "crates/semantics", 
    "crates/verifier",
]

[workspace.package]
authors = ["Gherman Nicolisin <german.nikolishin@gmail.com"]
categories = ["languages", "compiler"]
edition = "2021"
homepage = "https://nikolish.in"
keywords = ["parser", "compiler", "smart-contracts", "blockchain", "formal-verification"]
license = "Apache-2.0"
repository = "https://github.com/SkymanOne/folidity"
version = "1.0.0"

[workspace.dependencies]
folidity-parser = { path = "crates/parser" }
folidity-diagnostics = { path = "crates/diagnostics" }
folidity-semantics = { path = "crates/semantics" }
folidity-verifier = { path = "crates/semantics" }
derive-node = { path = "crates/derive_node" }
logos = "0.14"
lalrpop-util = "0.20"
lalrpop = "0.20"
thiserror = "1.0"
syn = "2.0"
synstructure = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
indexmap = "2.2"
petgraph = "0.6.4"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
algonaut_core = "0.4"
hex = "0.4"
regex = "1.10"
clap = { version ="4.5", features = ["derive"]}
ariadne = { version = "0.4", features = ["auto-color"] }
anyhow = "1.0"
walkdir = "2.5"
yansi = "1.0"
