[package]
name = "derive-node"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true }
synstructure = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[lib]
proc-macro = true