[package]
name = "folidity"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folidity-parser = { workspace = true }
folidity-semantics = { workspace = true }
folidity-verifier = { workspace = true }
folidity-diagnostics = { workspace = true }
clap = { workspace = true }
ariadne = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
yansi = { workspace = true }