[package]
name = "folidity-parser"
authors = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13"
lalrpop-util = "0.20"
thiserror = "1.0"
derive-node = { workspace = true }

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20"