[package]
name = "folidity-parser"
authors = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = { workspace = true }
lalrpop-util = { workspace = true }
thiserror = { workspace = true }
derive-node = { workspace = true }
folidity-diagnostics = { workspace = true }

[build-dependencies] # <-- We added this and everything after!
lalrpop = { workspace = true }