[package]
name = "folidity-verifier"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Formal verification library for the Folidity compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folidity-semantics = { workspace = true }
z3 = { workspace = true }